<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="channels"
        android:icon="@drawable/ic_channels"
        android:shortcutShortLabel="@string/shortcut_channels"
        android:shortcutLongLabel="@string/shortcut_channels_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.iptvwala"
            android:targetClass="com.iptvwala.presentation.MainActivity"
            android:data="iptvwala://channels" />
    </shortcut>
    <shortcut
        android:shortcutId="favorites"
        android:icon="@drawable/ic_favorite"
        android:shortcutShortLabel="@string/shortcut_favorites"
        android:shortcutLongLabel="@string/shortcut_favorites_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.iptvwala"
            android:targetClass="com.iptvwala.presentation.MainActivity"
            android:data="iptvwala://favorites" />
    </shortcut>
    <shortcut
        android:shortcutId="plainapp"
        android:icon="@drawable/ic_remote"
        android:shortcutShortLabel="@string/shortcut_plainapp"
        android:shortcutLongLabel="@string/shortcut_plainapp_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.iptvwala"
            android:targetClass="com.iptvwala.presentation.MainActivity"
            android:data="iptvwala://plainapp" />
    </shortcut>
</shortcuts>
